правки после инициализации

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,30 @@
     {% include 'templates/head.html' %}
   </head>
   <body>
-    {% include 'templates/header.html' %}
+    <div class="main">
+      <section id="home">
+        {% include 'templates/header.html' %}
+      </section>
+      <section id="about">
+        {% include 'templates/about-us.html' %}
+      </section>
+      <section id="product">
+        {% include 'templates/product.html' %}
+      </section>
+      <section id="blog">
+        {# {% include 'templates/blog-rev.html' %} #}
+      </section>
+      <section id="service">
+        {% include 'templates/service.html' %}
+      </section>
+      <section id="gallery">
+        {% include 'templates/gallery.html' %}
+      </section>
+    </div>
+    <section id="contacs">
+      {% include 'templates/footer.html' %}
+    </section>
 
-    {% include 'templates/footer.html' %}
   </body>
+  
 </html>
