--- a/src/index.html
+++ b/src/index.html
@@ -5,30 +5,32 @@
     {% include 'templates/head.html' %}
   </head>
   <body>
-    <div class="main">
-      <section id="home">
-        {% include 'templates/header.html' %}
-      </section>
-      <section id="about">
-        {% include 'templates/about-us.html' %}
-      </section>
-      <section id="product">
-        {% include 'templates/product.html' %}
-      </section>
-      <section id="blog">
-        {# {% include 'templates/blog-rev.html' %} #}
-      </section>
-      <section id="service">
-        {% include 'templates/service.html' %}
-      </section>
-      <section id="gallery">
-        {% include 'templates/gallery.html' %}
-      </section>
-    </div>
-    <section id="contacs">
-      {% include 'templates/footer.html' %}
-    </section>
+    <div class="wrapper-for-modal" id="example"> <!--Переименную класс  я нап окнакояй лнить подходящий под твой б эм. И айди измени под смысл. Тут и в js -->
+      <div class="main">
+        <section id="home">
+          {% include 'templates/header.html' %}
+        </section>
+        <section id="about">
+          {% include 'templates/about-us.html' %}
+        </section>
+        <section id="product">
+          {% include 'templates/product.html' %}
+        </section>
+        <section id="blog">
+          {% include 'templates/blog-rev.html' %}
+        </section>
+        <section id="service">
+          {% include 'templates/service.html' %}
+        </section>
+        <section id="gallery">
+          {% include 'templates/gallery.html' %}
+        </section>
+        <section id="contacs">
+          {% include 'templates/footer.html' %}
+        </section>
+      </div>
 
+    </div>
   </body>
-  
+
 </html>
