--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     {% include 'templates/head.html' %}
   </head>
   <body>
-    <div class="wrapper-for-modal" id="example"> <!--Переименную класс  я нап окнакояй лнить подходящий под твой б эм. И айди измени под смысл. Тут и в js -->
+    <div class="wrapper-for-modal" id="example"> 
       <div class="main">
         <section id="home">
           {% include 'templates/header.html' %}
